# WEB-HW8

./: README.md
HW8_PART2/: config.ini  connection.py  consumer.py  models.py  producer.py  pyproject.toml
HW8_part1/: config.ini  connection.py  main.py  models.py  pyproject.toml  seeds.py
